k8s/apps/argocd/manifests/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-route-argocd-server
  namespace: argocd
  annotations:
    external-dns.kubernetes.io/hostname: argocd.${DOMAIN}
    external-dns.kubernetes.io/target: traefik.${DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.${DOMAIN}`)
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.${DOMAIN}`) && Header(`Content-Type`, `application/grpc`)
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-server-tls
